--- a/css/home.css
+++ b/css/home.css
@@ -5,3 +5,11 @@ li {
 #tempo{
     margin-left: 100px;
 }
+
+#card2{
+    background-color: lightskyblue;
+}
+
+#cidade {
+    font-weight: bold;
+}
